# url-sanitize

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: broken-url.yml  rule-source-request.yml
.github/workflows/: auto-tag.yml  ci.yml  release.yml  sync-clearurls.yml
.husky/: pre-push
conformance/: clearurls-corpus.jsonl  conformance.test.ts  manifest.json  properties.md  schema.json  vectors.jsonl
conformance/inputs/: corpus.txt  vectors.jsonl
crates/url-sanitize/: Cargo.toml  README.md
crates/url-sanitize-core/: Cargo.toml  README.md
crates/url-sanitize-core/src/: catalog.rs  compile.rs  lib.rs  sanitize.rs  types.rs
crates/url-sanitize/catalog/: clearurls.json
crates/url-sanitize/src/: main.rs
crates/url-sanitize/tests/: conformance.rs
docs/: clearurls-compat.md  license-model.md  non-goals.md  roadmap.md  spec.md  threat-model.md
python/: README.md
python/url_sanitize/: __init__.py  __main__.py
scripts/: build-catalog.ts  build-conformance.ts  bump-version.mjs  install.ps1  install.sh  pre-push.sh
sources/clearurls/: sync.ts
