[workspace]
resolver = "2"
members = ["crates/url-sanitize-core", "crates/url-sanitize"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Antonio Orionus <OrionusAI@proton.me>"]
repository = "https://github.com/antonio-orionus/url-sanitize"
homepage = "https://github.com/antonio-orionus/url-sanitize"

[workspace.dependencies]
url-sanitize-core = { path = "crates/url-sanitize-core", version = "0.1.1" }
regex-lite = "0.1"
url = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
