[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "url-sanitize"
version = "0.1.2"
description = "Remove tracking parameters and unwrap tracking redirects from URLs with ClearURLs-compatible rules."
readme = "python/README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Antonio Orionus", email = "OrionusAI@proton.me" }]
keywords = ["url", "tracking", "privacy", "clearurls", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/antonio-orionus/url-sanitize"
Repository = "https://github.com/antonio-orionus/url-sanitize"
Issues = "https://github.com/antonio-orionus/url-sanitize/issues"

[project.scripts]
url-sanitize = "url_sanitize.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["python/url_sanitize"]
