[package]
name = "url-sanitize"
description = "Native CLI to remove tracking parameters and unwrap tracking redirects. ClearURLs ruleset baked in."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["url", "sanitize", "clearurls", "tracking", "privacy"]
categories = ["command-line-utilities"]

[[bin]]
name = "url-sanitize"
path = "src/main.rs"

[dependencies]
url-sanitize-core = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
